<resources>
    <string name="app_name">DemoP</string>

    <string name="bukeyong2">不可用2</string>
    <string name="bukeyong3">不可用3</string>
    <string name="kuaijieceshi2">快捷测试2</string>
    <string name="kuaijieceshi3">快捷测试3</string>
    <string name="ceshirukou2">测试入口2</string>
    <string name="ceshirukou3">测试入口3</string>

    <string name="string_text">1：【改】用户初次登录会员中心状态和未登录状态优化，首次登录，我的界面头像右侧应展示用户手机号，例：133****1698，用户填写姓名后则手机号变更为姓名
2：【新】添加[首页][工具][我的]导航页面的背景信息，见原型
3：【取消】加载刷新动画效果，不放在本次迭代任务中
4：【新】将“人人保讲堂”新闻子模块放在首页展示，后台新闻需要增加移动端“第几期”的字段
5：【改】提现不限制提现额度，大于等于1元即可进行提现，一个帐号一个月限提现1次
6：【新】增加“首页”“我的”渐变白底头部，APP手指向上滑动，页面向下时，弹出白色底部
7：【改】APP新闻图片目前为全部使用默认图片，按顺序排列，建议读取后台图片，没有图片使用系统默认图片
8：【新】默认本地未加载图片：新闻未加载图片
9：【改】点击首页新手帮助直接进入缴社保下单流程，“如何缴社保”“如何缴公积金”按钮里的文字和底线的位置有便宜，请一起调整。
10：【改】“我的”界面的“联系客服”按钮高度有偏差（下方留白区域小了），请校对。
11：【改】首页右上角的[消息]按钮调整为[电话]按钮，首页最大的“免费咨询”按钮暂时砍掉
12：【新】订单误差在正负20元以内则不退不补
13：【改】发票不选择个人部分与企业部分，直接按照代缴费用和服务费进行开票，发票服务费（开票税点变更为发票服务费）需要加到开票总额中。涉及页面包括申请发票页面与支付发票金额页面；开票总额说明文案“开票总额包含所支付的发票服务费金额。”
14：【改】分享规则变更：
  1.您邀请的好友可以立即获得20元现金红包，仅限首次注册的好友
  2.被邀请人在人人保购买社保或公积金服务时，邀请人每次都可以获得20元现金红包
  3.您邀请成功的用户，再邀请其他用户购买社保或公积金服务后，您还可以获得10元现金红包奖励
  4.您活动中获得的收益，可随时转入余额并用于人人保相关服务
  5.最终解释权归人人保所有
15：【改】新参/续缴/补缴都展示在参保类型中
16：【新】后台创建新闻时在“描述”字段下方增加“期数”字段，可读写改，APP前端“第十期”样式有不同颜色图片，按照设计稿图片数量进行轮回</string>
</resources>
